test/development/acceptance-app/__snapshots__/ReactRefreshLogBox.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactRefreshLogBox app default Import trace when module not found in layout 1`] = `
"./app/module.js:1:0
Module not found: Can't resolve 'non-existing-module'
> 1 | import \\"non-existing-module\\"

Import trace for requested module:
./app/layout.js

https://nextjs.org/docs/messages/module-not-found"
`;

exports[`ReactRefreshLogBox app default Should not show __webpack_exports__ when exporting anonymous arrow function 1`] = `
"index.js (4:16) @ default

  2 | export default () => {
  3 |  if (typeof window !== 'undefined') {
> 4 |    throw new Error('test')
    |         ^
  5 |  }
  6 | 
  7 |  return null"
`;

exports[`ReactRefreshLogBox app default boundaries 1`] = `
"FunctionDefault.js (1:50) @ FunctionDefault

> 1 | export default function FunctionDefault() { throw new Error('no'); }
    |                                                  ^"
`;

exports[`ReactRefreshLogBox app default conversion to class component (1) 1`] = `
"Child.js (5:18) @ ClickCount.render

  3 |   export default class ClickCount extends Component {
  4 |     render() {
> 5 |       throw new Error()
    |            ^
  6 |     }
  7 |   }
  8 | "
`;

exports[`ReactRefreshLogBox app default css syntax errors 1`] = `
"./index.module.css:1:1
Syntax error: Selector \\"button\\" is not pure (pure selectors must contain at least one local class or id)

> 1 | button {}
    | ^"
`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 1`] = `"Error: end http://nextjs.org"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 2`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 3`] = `"Error: http://nextjs.org start"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 4`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 5`] = `"Error: middle http://nextjs.org end"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 6`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 8`] = `"http://nextjs.org/"`;

exports[`ReactRefreshLogBox app default logbox: anchors links in error messages 9`] = `"http://example.com/"`;

exports[`ReactRefreshLogBox app default logbox: can recover from a component error 1`] = `
"child.js (4:16) @ Child

  2 |   // hello
  3 |   export default function Child() {
> 4 |     throw new Error('oops')
    |          ^
  5 |   }
  6 | "
`;

exports[`ReactRefreshLogBox app default logbox: can recover from a event handler error 1`] = `
"index.js (8:18) @ eval

   6 | const increment = useCallback(() => {
   7 |   setCount(c => c + 1)
>  8 |   throw new Error('oops')
     |        ^
   9 | }, [setCount])
  10 | return (
  11 |   <main>"
`;

exports[`ReactRefreshLogBox app default logbox: can recover from a syntax error without losing state 1`] = `
"./index.js
Error: 
  x Unexpected eof
   ,----
 1 | export default () => <div/
   \`----

Caused by:
    0: failed to process input file
    1: Syntax Error

Import trace for requested module:
./index.js
./app/page.js"
`;

exports[`ReactRefreshLogBox app default module init error not shown 1`] = `
"index.js (4:14) @ eval

  2 | // top offset for snapshot
  3 | import * as React from 'react';
> 4 | throw new Error('no')
    |      ^
  5 | class ClassDefault extends React.Component {
  6 |   render() {
  7 |     return <h1>Default Export</h1>;"
`;

exports[`ReactRefreshLogBox app default render error not shown right after syntax error 1`] = `
"index.js (6:18) @ ClassDefault.render

  4 | class ClassDefault extends React.Component {
  5 |   render() {
> 6 |     throw new Error('nooo');
    |          ^
  7 |     return <h1>Default Export</h1>;
  8 |   }
  9 | }"
`;

exports[`ReactRefreshLogBox app default should strip whitespace correctly with newline 1`] = `
"index.js (9:34) @ onClick

   7 | 
   8 | <a onClick={() => {
>  9 |   throw new Error('idk')
     |        ^
  10 | }}>
  11 |   click me
  12 | </a>"
`;

exports[`ReactRefreshLogBox app default stuck error 1`] = `
"Foo.js (4:10) @ Foo

  2 |   // intentionally skips export
  3 |   export default function Foo() {
> 4 |     return React.createElement('h1', null, 'Foo');
    |    ^
  5 |   }
  6 | "
`;

exports[`ReactRefreshLogBox app default syntax > runtime error 1`] = `
"index.js (6:16) @ Error

  4 | setInterval(() => {
  5 |   i++
> 6 |   throw Error('no ' + i)
    |        ^
  7 | }, 1000)
  8 | export default function FunctionNamed() {
  9 |   return <div />"
`;

exports[`ReactRefreshLogBox app default syntax > runtime error 2`] = `
"./index.js
Error: 
  x Expected '}', got '<eof>'
   ,-[5:1]
 5 |           i++
 6 |           throw Error('no ' + i)
 7 |         }, 1000)
 8 |         export default function FunctionNamed() {
   :                                                 ^
   \`----

Caused by:
    0: failed to process input file
    1: error was recoverable, but proceeding would result in wrong codegen
    2: Syntax Error

Import trace for requested module:
./index.js
./app/page.js"
`;

exports[`ReactRefreshLogBox app default syntax > runtime error 3`] = `
"./index.js
Error: 
  x Expected '}', got '<eof>'
   ,-[5:1]
 5 |           i++
 6 |           throw Error('no ' + i)
 7 |         }, 1000)
 8 |         export default function FunctionNamed() {
   :                                                 ^
   \`----

Caused by:
    0: failed to process input file
    1: error was recoverable, but proceeding would result in wrong codegen
    2: Syntax Error

Import trace for requested module:
./index.js
./app/page.js"
`;

exports[`ReactRefreshLogBox app default unterminated JSX 1`] = `
"./index.js
Error: 
  x Unexpected token. Did you mean \`{'}'}\` or \`&rbrace;\`?
   ,-[5:1]
 5 |               <p>lol</p>
 6 |             div
 7 |           )
 8 |         }
   :         ^
 9 |       
   \`----

  x Unexpected eof
   ,-[6:1]
 6 |             div
 7 |           )
 8 |         }
 9 |       
   \`----

Caused by:
    0: failed to process input file
    1: Syntax Error

Import trace for requested module:
./index.js
./app/page.js"
`;
